# nego

./: CREDITS.md  Cargo.toml  LICENSE  QUESTIONS.md  README.md
.github/workflows/: rust.yml
doc/: NOTES.md  QUESTIONS.md
src/: ai.rs  bitboard.rs  coord.rs  error.rs  game.rs  gen_move_tab.rs  konego.rs  lib.rs  main.rs  move.rs  move_tab.rs  nego.rs  orientation.rs  pieces.rs  ray.rs  square.rs
src/agent/: mcts.rs  mcts2.rs  mod.rs  negamax.rs
src/core/: bitboard.rs  coord.rs  game.rs  mod.rs  move.rs  move_tab.rs  orientation.rs  pieces.rs  ray.rs  square.rs  zobrist.rs
src/ui/: app.rs  draw.rs  mod.rs  piece.rs  worker.rs
tests/: game.rs  ui.rs
tests/snapshots/: game__snapshot-10.snap  game__snapshot-11.snap  game__snapshot-12.snap  game__snapshot-13.snap  game__snapshot-14.snap  game__snapshot-15.snap  game__snapshot-16.snap  game__snapshot-17.snap  game__snapshot-18.snap  game__snapshot-19.snap  game__snapshot-2.snap  game__snapshot-20.snap  game__snapshot-3.snap  game__snapshot-4.snap  game__snapshot-5.snap  game__snapshot-6.snap  game__snapshot-7.snap  game__snapshot-8.snap  game__snapshot-9.snap  game__snapshot.snap  game__snapshot.snap.new
