[package]
name = "nego"
version = "0.1.0"
edition = "2021"
default-run = "nego"


[[bin]]
name = "nego"
path = "src/nego.rs"

[[bin]]
name = "konego"
path = "src/konego.rs"

[[bin]]
name = "gen_move_tab"
path = "src/gen_move_tab.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy = "0.3.1"
log = "0.4"
minimax = "0.5.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rustyline = "13.0.0"
