[package]
name = "nego"
version = "0.1.0"
edition = "2021"
default-run = "konego"

[lib]
name = "nego"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "bin/demo.rs"


[[bin]]
name = "konego"
path = "bin/konego.rs"

[[bin]]
name = "gen_move_tab"
path = "bin/gen_move_tab.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.6.1"
comfy = "0.3.1"
log = "0.4"
minimax = "0.5.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
insta = "1.34.0"
